Error Mitigation/MagiCoder/Data/java_awt_color/java_awt_colorOutputResult.txt
Sample: ColorSpace_1
----------------------------------------------------------------
stdout:
0.5131151
0.48542002
0.62444496

================================================================

Sample: ColorSpace_2
----------------------------------------------------------------
stdout:
1.0
0.5000076
0.2500038

================================================================

Sample: ColorSpace_3
----------------------------------------------------------------
stdout:
CIEXYZ: 0.20639038, 0.2140503, 0.1765747

================================================================

Sample: ColorSpace_4
----------------------------------------------------------------
stdout:
RGB values: 0.5000076, 0.5000076, 0.5000076

================================================================

Sample: ICC_ColorSpace_4
----------------------------------------------------------------
output:
./Data/java_awt_color/javaFiles/ICC_ColorSpace_4.java:6: error: incompatible types: int cannot be converted to ICC_Profile
        ICC_ColorSpace icc = new ICC_ColorSpace(ColorSpace.CS_sRGB);
                                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

